k8s/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
  labels:
    app: traefik
spec:
  type: NodePort
  ports:
  - name: web
    port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
  - name: websecure
    port: 443
    targetPort: 443
    nodePort: 30443
    protocol: TCP
  - name: admin
    port: 8080
    targetPort: 8080
    nodePort: 30088
    protocol: TCP
  selector:
    app: traefik
